src/test/deca/context/invalid/Objet/undeclared_type_inParam.des
The type B  is not authorized